# vSMTP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  deny.toml  release.toml
.github/workflows/: benchmark.yaml  ci.yaml  fuzzer.yaml  post-release.yaml
benches/: receiver.rs
benchmarks/: README.md
benchmarks/stress/: Cargo.toml  README.md  main.vsl  vsmtp.stress.toml
config/: log4rs.toml  vsmtp.default.toml  vsmtp.dev-local.toml  vsmtp.toml
config/rules/: main.vsl  test.vsl
example/antivirus/: main.vsl
examples/config/: README.md  logging.toml  secured.toml  simple.toml  tls.toml
fuzz/: Cargo.toml
src/: config.rs  connection.rs  lib.rs  libc_abstraction.rs  main.rs  my_libc.rs  queue.rs  resolver.rs  server.rs  test_helpers.rs  tls.rs  tls_helpers.rs  transaction.rs
src/config/: default.rs  (+6 more)
src/vsmtp/: Cargo.toml
src/vsmtp/src/: main.rs  tracing_subscriber.rs
src/vsmtp/vsmtp-auth/: Cargo.toml
src/vsmtp/vsmtp-auth/src/dkim/: canonicalization.rs  mod.rs  public_key.rs  sign.rs  signature.rs
src/vsmtp/vsmtp-auth/src/dkim/tests/: verify.rs
src/vsmtp/vsmtp-auth/src/dmarc/: record.rs
src/vsmtp/vsmtp-common/: Cargo.toml
src/vsmtp/vsmtp-common/src/: either.rs  envelop.rs  event.rs  lib.rs  libc_abstraction.rs  mail_context.rs  mechanism.rs  queue.rs  rcpt.rs  state.rs  status.rs  transfer.rs  utils.rs
src/vsmtp/vsmtp-common/src/dkim/: algorithm.rs  canonicalization.rs  key.rs  signature.rs
src/vsmtp/vsmtp-common/src/message/: mail.rs  message_body.rs  mime_type.rs  raw_body.rs
src/vsmtp/vsmtp-common/src/trait/: mail_parser.rs
src/vsmtp/vsmtp-common/src/type/: code_id.rs
src/vsmtp/vsmtp-config/: Cargo.toml
src/vsmtp/vsmtp-config/src/: config.rs  default.rs  impl.rs  lib.rs  log4rs_helper.rs  rustls_helper.rs  trust_dns_helper.rs  virtual_tls.rs
src/vsmtp/vsmtp-config/src/builder/: validate.rs  wants.rs  with.rs
src/vsmtp/vsmtp-config/src/parser/: tls_certificate.rs  tls_private_key.rs
src/vsmtp/vsmtp-config/src/tests/root_example/: antivirus.rs  logging.rs  minimal.rs  secured.rs  simple.rs  tls.rs
src/vsmtp/vsmtp-delivery/: Cargo.toml
src/vsmtp/vsmtp-delivery/src/: lib.rs
src/vsmtp/vsmtp-delivery/src/transport/: deliver.rs  forward.rs  maildir.rs  mbox.rs
src/vsmtp/vsmtp-dkim/: Cargo.toml
src/vsmtp/vsmtp-dkim/src/: canonicalization.rs  key.rs  lib.rs  sign.rs  signature.rs  verify.rs
src/vsmtp/vsmtp-dkim/src/tests/: simple2.eml  verify.rs
src/vsmtp/vsmtp-docs/: Cargo.toml
src/vsmtp/vsmtp-docs/src/: main.rs
src/vsmtp/vsmtp-mail-parser/: Cargo.toml
src/vsmtp/vsmtp-mail-parser/src/: helpers.rs  parser.rs
src/vsmtp/vsmtp-mail-parser/src/tests/: mod.rs
src/vsmtp/vsmtp-mail-parser/src/tests/mime_parser/: SimpleSubject.rs  allen_p__discussion_threads__1.rs  methods.rs  mime1.rs
src/vsmtp/vsmtp-mail-parser/src/tests/mime_parser/rfc2049/: a.rs
src/vsmtp/vsmtp-mail-parser/src/tests/mime_parser/rfc5322/: a_1_1.rs  a_1_2.rs  a_1_3.rs  a_2.rs  a_3.rs  a_4.rs  a_5.rs
src/vsmtp/vsmtp-rule-engine/: Cargo.toml
src/vsmtp/vsmtp-rule-engine/api/: auth.rhai
src/vsmtp/vsmtp-rule-engine/src/: error.rs  lib.rs  rule_engine.rs  rule_state.rs
src/vsmtp/vsmtp-rule-engine/src/api/: auth.rhai  codes.rhai  dkim.rs  rhai-api.rhai  services.rhai  sys-api.rhai  utils.rhai  utils.rs
src/vsmtp/vsmtp-rule-engine/src/dsl/: directives.rs  mod.rs
src/vsmtp/vsmtp-rule-engine/src/dsl/object/: mod.rs  parsing.rs
src/vsmtp/vsmtp-rule-engine/src/dsl/service/: mod.rs  parsing.rs  smtp.rs
src/vsmtp/vsmtp-rule-engine/src/modules/: actions.rs  mail_context.rs  message.rs  mod.rs  types.rs
src/vsmtp/vsmtp-rule-engine/src/modules/actions/: bcc.rs  dkim.rs  headers.rs  logging.rs  rule_state.rs  security.rs  services.rs  transports.rs  utils.rs  write.rs
src/vsmtp/vsmtp-rule-engine/src/tests/: actions.rs  integrations.rs  rules.rs
src/vsmtp/vsmtp-rule-engine/src/tests/context/: main.vsl  mod.rs
src/vsmtp/vsmtp-rule-engine/src/tests/email/: main.vsl  mod.rs
src/vsmtp/vsmtp-rule-engine/src/tests/email/mutate_header/: main.vsl
src/vsmtp/vsmtp-rule-engine/src/tests/engine/: mod.rs
src/vsmtp/vsmtp-rule-engine/src/tests/message/: main.vsl
src/vsmtp/vsmtp-rule-engine/src/tests/message/bcc/: main.vsl
src/vsmtp/vsmtp-rule-engine/src/tests/types/: mod.rs
src/vsmtp/vsmtp-rule-engine/src/tests/types/address/: objects.vsl
src/vsmtp/vsmtp-rule-engine/src/tests/types/ip/: main.vsl
src/vsmtp/vsmtp-server/: Cargo.toml  client.txt
src/vsmtp/vsmtp-server/benches/: receiver.rs  receiver2.rs
src/vsmtp/vsmtp-server/benches/iai/: receiver.rs
src/vsmtp/vsmtp-server/src/: auth.rs  lib.rs  runtime.rs  server.rs
src/vsmtp/vsmtp-server/src/delivery/: deferred.rs  deliver.rs  mod.rs
src/vsmtp/vsmtp-server/src/processes/: delivery.rs  mod.rs  postq.rs
src/vsmtp/vsmtp-server/src/processes/delivery/: deferred.rs  deliver.rs
src/vsmtp/vsmtp-server/src/processing/: mod.rs
src/vsmtp/vsmtp-server/src/receiver/: auth_exchange.rs  connection.rs  mod.rs  on_mail.rs  transaction.rs
src/vsmtp/vsmtp-test/: Cargo.toml
src/vsmtp/vsmtp-test/src/: receiver.rs
src/vsmtp/vsmtp-test/src/tests/: clair.rs  rset.rs  utf8.rs
src/vsmtp/vsmtp-test/src/tests/auth/: all_mechanism.rs  basic.rs
src/vsmtp/vsmtp-test/src/tests/examples/: doe_family.rs
src/vsmtp/vsmtp-test/src/tests/rules/quarantine/: mod.rs
src/vsmtp/vsmtp-test/src/tests/rules/quarantine/john/: 16531295888817941653129588815C7hZfyR5dJhANJRMo6sfJNpkAWaBxPJfCkjA50614.json  16531296720829451653129672014jF2vORpSDgVOnXXGrC7BCwrknAIxeChn5a1V51485.json  16531300186083901653130018514EqCuKclEVmHb5xBA7e4sNb5stfjQuAayoQgh55878.json
src/vsmtp/vsmtp-test/src/tests/tls/: mod.rs  tunneled.rs  tunneled_with_auth.rs
tests/: mod.rs  stress.rs
tools/: diff.json  instructions.sh
vqueue/: Cargo.toml
vsmtp/: Cargo.toml
vsmtp-common/: Cargo.toml
vsmtp-config/: Cargo.toml  trace.json
vsmtp-delivery/: Cargo.toml
vsmtp-mail-parser/: Cargo.toml
vsmtp-rule-engine/: Cargo.toml
vsmtp-server/: Cargo.toml
vsmtp-test/: Cargo.toml
(+377 files in other folders)
