[package]
name = "v-smtp"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = { version = "1.0" }

# config = { version = "0.11.0", features = ["toml"] }
clap = "2.34.0"

## Parser / Serializer
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.72"
toml = "0.5.8"
humantime = "2.1.0"
humantime-serde = "1.0.1"
addr = { version = "0.15.0" }
regex = "1.5.4"
iprange = "0.6.6"
ipnet = "2.3.1"
chrono = "0.4"

rhai = { version = "1.1.0", features = ["unchecked", "sync"] }

# the 0.10 release is more stable than the 0.9 and enable async support.
lettre = "0.10.0-rc.4"

async-trait = "0.1.51"
lazy_static = "1.4"

rustls = { version = "0.20.0", features = ["tls12", "logging"] }
rustls-pemfile = "0.2.1"

tokio = { version = "1.14.0", features = ["full"] }
