[package]
name = "vsmtp"
version = "0.7.0"
edition = "2021"
publish = false
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = { version = "1.0" }

clap = "2.34.0"

libc = "0.2.112"

## Parser / Serializer
serde = { version = "1.0.132", features = ["derive"] }
serde_derive = "1.0.132"
serde_with = { version = "1.11.0", features = ["macros"] }
serde_json = "1.0.73"

toml = "0.5.8"
humantime = "2.1.0"
humantime-serde = "1.0.1"
addr = { version = "0.15.2" }
regex = "1.5.4"
iprange = "0.6.6"
ipnet = "2.3.1"
chrono = "0.4"

rhai = { version = "1.1.0", features = ["unchecked", "sync"] }

# the 0.10 release is more stable than the 0.9 and enable async support.
lettre = "0.10.0-rc.4"

async-trait = "0.1.52"
lazy_static = "1.4"

rustls = { version = "0.20.2", features = ["tls12", "logging"] }
rustls-pemfile = "0.2.1"

tokio = { version = "1.15.0", features = ["full"] }

# inactive since Oct. 2020
users = "0.11"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }
fork = "0.1.18"
rand = "0.8.4"

[[bench]]
name = "receiver"
harness = false
