[package]
edition = "2021"

name = "vsmtp"
version = "1.0.0"
license = "GPL-3.0-only"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

rust-version = "1.58"
default-run = "vsmtp"

[dependencies]
vsmtp-common = { version = "^1.0.0", path = "./vsmtp-common" }
vsmtp-server = { version = "^1.0.0", path = "./vsmtp-server" }
vsmtp-config = { version = "^1.0.0", path = "./vsmtp-config" }

clap = { version = "3.1.15", features = ["derive"] }
diff = "0.1.12"

# 
# DEBIAN PACKAGING
#
# Note that as the postinst script uses the adduser there's a
# dependency on the adduser package to keep the lintian tool happy.
#
[package.metadata.deb]
name = "vsmtp"
maintainer = "Pag <pag@viridit.com>"
copyright = "2022 - viridIT SAS"
license-file = ["../../LICENSE", "0"]
extended-description = "A high performance MTA written in RUST."
depends = "$auto, passwd"
section = "mail"
priority = "optional"
assets = [
    ["target/release/vsmtp", "usr/sbin/", "755"],
    ["target/release/vqueue", "usr/sbin/", "755"],
    ["../../README.md", "usr/share/doc/vsmtp/README", "644"],
    ["../../examples/config/*", "usr/share/doc/vsmtp/config/", "644"],
]
maintainer-scripts = "../../tools/install/debian/"
systemd-units = { unit-name = "vsmtp", enable = true, start = false }
