[package]
name = "vsmtp-docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", search = "vsmtp-rule-engine = \\{ path = \"../vsmtp-rule-engine\", default-features = false, version = .*", replace = "vsmtp-rule-engine = { path = \"../vsmtp-rule-engine\", default-features = false, version = \"{{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-rule-engine = { path = "../vsmtp-rule-engine", default-features = false, version = "1.1.3" }
rhai = { version = "1.8.0", features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
    "metadata",
] }
