[package]
edition = "2021"

name = "vsmtp-rule-engine"
version = "1.1.0"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-rule-engine/"

readme = "../../../README.md"
keywords = [
  "vsmtp",
  "scripting-engine",
  "scripting-language",
  "scripting",
  "rhai",
]
categories = ["config"]

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.1.0", default-features = false }
vsmtp-config = { path = "../vsmtp-config", version = "1.1.0", default-features = false }
vsmtp-mail-parser = { path = "../vsmtp-mail-parser", version = "1.1.0", default-features = false }

thiserror = "1.0.31"

# objects
regex = "1.5.5"
iprange = "0.6.7"
ipnet = "2.5.0"
csv = "1.1"

viaspf = { version = "0.4.1", features = ["trust-dns-resolver"] }
hostname = "0.3.1"
time = { version = "0.3.11", default-features = false, features = [
  "std",
  "formatting",
  "macros",
] }

rhai = { version = "1.8.0", features = [
  "unchecked",
  "sync",
  "internals",
  "no_closure",
] }

wait-timeout = "0.2.0"

[dev-dependencies]
vsmtp-mail-parser = { path = "../vsmtp-mail-parser" }

[features]
default = ["vsmtp-common/gsasl_bindgen"]

# TODO: improve that
[package.metadata.docs.rs]
features = []
all-features = false
no-default-features = true
